--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.5.1"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
