--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build:dev": "cross-env NODE_ENV=development webpack", 
+    "build:prod": "cross-env NODE_ENV=production webpack",
     "dev:server": "webpack serve"
   },
   "repository": {
@@ -19,10 +20,17 @@
   },
   "homepage": "https://github.com/HXWfromDJTU/webpack-playground#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "jquery": "^3.5.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.7.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
