--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "cross-env NODE_ENV=development webpack",
     "build:prod": "cross-env NODE_ENV=production webpack",
+    "build:dll": "cross-env NODE_ENV=production webpack --config webpack.dll.conf.js",
     "dev:server": "webpack serve",
     "test-server": "node test/server.js"
   },
@@ -23,12 +24,15 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "express": "^4.17.1",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "vue": "^2.6.12",
+    "vuetify": "^2.3.18"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.7.0",
@@ -49,10 +53,13 @@
     "sass-loader": "^10.1.0",
     "scss-loader": "^0.0.1",
     "style-loader": "^2.0.0",
+    "thread-loader": "^3.0.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.6.0",
+    "webpack-bundle-analyzer": "^4.1.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "browserslist": {
     "development": [
@@ -66,5 +73,7 @@
       "not op_mini all"
     ]
   },
-  "sideEffects": ["*.css"]
+  "sideEffects": [
+    "*.css"
+  ]
 }
