--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/polyfill": "^7.12.1",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "jszip": "^3.5.0",
     "vue": "^2.6.12",
     "vuetify": "^2.3.18"
   },
@@ -59,6 +60,7 @@
     "webpack-bundle-analyzer": "^4.1.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
+    "webpack-sources": "^2.2.0",
     "workbox-webpack-plugin": "^5.1.4"
   },
   "browserslist": {
