--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:prod": "cross-env NODE_ENV=production webpack",
     "build:dll": "cross-env NODE_ENV=production webpack --config webpack.dll.conf.js",
     "dev:server": "webpack serve",
-    "test-server": "node test/server.js"
+    "test-server": "node test/server.js",
+    "raw-loader": "node source-code-playground/raw-loader/run-loader.js",
+    "vue-loader-test": "node source-code-playground/vue-loader-test/run-loader.js"
   },
   "repository": {
     "type": "git",
@@ -46,6 +48,8 @@
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
+    "loader-runner": "^4.1.0",
+    "loader-utils": "^2.0.0",
     "mini-css-extract-plugin": "^1.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.1.0",
@@ -56,6 +60,7 @@
     "style-loader": "^2.0.0",
     "thread-loader": "^3.0.1",
     "url-loader": "^4.1.1",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^5.6.0",
     "webpack-bundle-analyzer": "^4.1.0",
     "webpack-cli": "^4.2.0",
